--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                          <p class="paragraph">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout. The point of using <br> Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
                          <button class="p-btn">Shop Now</button>
                 </div>
-
+ 
                 <div class="h-img">
                     <img src="Flower Asset/pngwing 10.png" alt="">
                 </div>
@@ -35,15 +35,15 @@
        <div class="feature-img">
         <div class="feature-img1">
             <img src="Flower Asset/pngwing 6.png" alt="">
-            <h3><u>Pink Flower</u></h3>
+            <h3><u>Pink Flower Tree</u></h3>
         </div>
         <div class="feature-img2">
             <img id="img2" src="Flower Asset/pngwing 5.png" alt="">
-            <h3><u>Red Flower</u></h3>
+            <h3><u>Red Flower Tree</u></h3>
         </div>
         <div class="feature-img3">
             <img id="img3" src="Flower Asset/pngwing 7.png" alt="">
-            <h3><u>Yellow Flower</u></h3>
+            <h3><u>Yellow Flower Tree</u></h3>
         </div>
        </div>
 
@@ -71,7 +71,7 @@
             <div class="hot-content">
                 <h1 id="h1">Hot Deal ! Sale Up To 25% <span id="off"> Off</span> </h1>
                      <p class="paragraph">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
-                     <button class="p-btn">Shop Now</button>
+                     <button class="p-btn">Sign Up</button>
             </div>
 
             <div class="hot-img">
@@ -82,7 +82,7 @@
        </section>
 
        <div class="Feature-class">
-        <h2>Our Feature Flower</h2>
+        <h2>Instagram</h2>
         <p class="paragraph">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
     </div>
 
@@ -99,7 +99,7 @@
         <h1 class="hello">Get The Latest Deals</h1>
         <p class="bottom">$30 coupon for first shopping</p>
         <input type="text" name="" id="input" placeholder="Enter your email here.">
-        <button class="p-btn">Shop Now</button>
+        <button class="p-btn">Subscribe</button>
     </div>
 
         
@@ -107,8 +107,8 @@
     <footer class="footer">
         <div class="Feature-class">
             <h2><span id="off">Flower</span> Shop</h2>
-            <p class="paragraph">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-            <p class="paragraph">@2020-2023, FlowerShop.com. All rights reserved. </p>
+            <p class="footer-paragraph">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+            <p class="fot-paragraph">@2020-2023, FlowerShop.com. All rights reserved. </p>
         </div>
 
 
